src/config/loader/snapshots/unknown__config__loader__tests__wont_import_tasks_from_out_of_workspace.snap
---
source: src/config/loader/tests.rs
expression: "render_miette(err, &test_files)"
---

  × Errors occurred when validating your configuration

Error: 
  × The provided path was not in the workspace: //task.kdl
   ╭─[project/project.kdl:2:1]
 2 │ tasks {
 3 │     import "../../task.kdl"
   ·            ────────┬───────
   ·                    ╰── the path is referenced here
 4 │ }
   ╰────

